--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "author": "Rick Lee <hello@ricklee.co>",
   "dependencies": {
     "@fontsource/archivo": "^4.5.1",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "babel-plugin-styled-components": "^1.13.3",
     "gatsby": "^4.1.0",
     "gatsby-plugin-gatsby-cloud": "^4.1.0",
     "gatsby-plugin-image": "^2.1.0",
     "gatsby-plugin-manifest": "^4.1.0",
+    "gatsby-plugin-mdx": "^3.2.0",
     "gatsby-plugin-offline": "^5.1.0",
     "gatsby-plugin-react-helmet": "^5.1.0",
     "gatsby-plugin-sharp": "^4.1.0",
