--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.1.0",
   "author": "Rick Lee <hello@ricklee.co>",
   "dependencies": {
-    "@fontsource/archivo": "^4.5.1",
+    "@fontsource/inter": "^4.5.1",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "babel-plugin-styled-components": "^1.13.3",
